--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -3,10 +3,10 @@ name: Unit tests
 on:
   push:
     paths-ignore:
-      - "doc/**"
+      - "dev/**"
   pull_request:
     paths-ignore:
-      - "doc/**"
+      - "dev/**"
 
 jobs:
   test:
